--- a/src/app/components/metronomics/metronomics.html
+++ b/src/app/components/metronomics/metronomics.html
@@ -8,11 +8,12 @@
 </div>
 <div class="modal-body">
 
-  <h4 class="neon-font blue">Metronomics</h4>
+  <h4 class="neon-font blue">Metronomics: The Science Behind the Learning</h4>
 
   <p>A Professional Development course that will help you understand the proven
     benefits of using songs, lyrics and music videos to boost achievement and
-    develop the whole child. Created to help teachers embed core Literacy skills
+    develop the whole child. </p>
+  <p>Created to help teachers embed core Literacy skills
     across the wider curriculum, this course focuses on the fascinating research
     of Metronomics: the science of how music enables the brain to acquire
     language both quickly and securely. </p>
@@ -20,9 +21,6 @@
   <p>It will also look at the wider benefits of using song lyrics in the
       classroom and explain the best ways in which to use music videos
       effectively to maximise their impact. </p>
-
-  <p>Packed full of practical and engaging activities, there is no doubt that
-    you will love this fun and uplifting course.</p>
   <p>&nbsp;</p>
 
     <div class="form-group">
