--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,5 +1,7 @@
 <nav class="col-sm-12 header blue">
   <div class="col-sm-12 text-center">
-    <h1 class="neon-font ">Jukebox Comprehension</h1>
+    <h1 class="neon-font ">
+      <img src="/assets/images/vinyl-record.png" height="50" width="50"/> Jukebox Comprehension <img src="/assets/images/vinyl-record.png" height="50" width="50"/>
+    </h1>
   </div>
 </nav>
