--- a/src/app/components/terms/terms.html
+++ b/src/app/components/terms/terms.html
@@ -34,7 +34,8 @@
     <p>  2.9b. The User must immediately inform www.jukeboxcomprehension.com by E-mail of (i) any unauthorized use of their E-mail address and Password and (ii) any resulting security breaches.</p>
 
     <h3 class="neon-font blue"> 3. Modification and Suspension </h3>
-    <p>  3.1. www.jukeboxcomprehension.com may, at any time, modify or suspend part of the Site without incurring any liability. 3.2. Unless for reasons of urgent work, www.jukeboxcomprehension.com will notify the User of any planned maintenance work or of any alteration or suspension of the Site. www.jukeboxcomprehension.com will try to carry out all such maintenance work outside of normal working hours (9 a.m. - 6 p.m., Monday to Friday) and will try to ensure minimum disruption for the User.</p>
+    <p>  3.1. www.jukeboxcomprehension.com may, at any time, modify or suspend part of the Site without incurring any liability.</p>
+    <p>  3.2. Unless for reasons of urgent work, www.jukeboxcomprehension.com will notify the User of any planned maintenance work or of any alteration or suspension of the Site. www.jukeboxcomprehension.com will try to carry out all such maintenance work outside of normal working hours (9 a.m. - 6 p.m., Monday to Friday) and will try to ensure minimum disruption for the User.</p>
 
     <h3 class="neon-font blue"> 4. Intellectual Property Rights </h3>
     <p>  4.1. All original materials on the Site are the copyright of Jukebox Comprehension Ltd. </p>
@@ -44,19 +45,20 @@
     <p>  4.5. For information on obtaining permission to reproduce or translate Jukebox Comprehension Ltd copyright material, please contact us directly via our “Contact Us” page.</p>
 
     <h3 class="neon-font blue"> 5. Responsibility </h3>
-    <p>   5.1. www.jukeboxcomprehension.com cannot guarantee (i) that the Site will satisfy the specific expectations and demands of the User and (ii) that the Site will continue uninterrupted or free from errors. As such, the User will not hold www.jukeboxcomprehension.com to obligation regarding the performance of the Site.</p>
-    <p>   5.2. In no case may www.jukebox comprehension.com be held responsible for any direct, indirect or accidental damage resulting from the incorrect use of the Site, or all other software or any connection to periphery hardware.</p>
-    <p>   5.3. The User or Visitor commits and consents to: - Not disturb or interrupt networks connected to the Site - Conform to all rules, login procedures, and conduct required on the Internet - Not to try to gain unauthorized access to other IT systems - Not to disturb the use and functioning of the Site or of all other similar services</p>
+    <p>  5.1. www.jukeboxcomprehension.com cannot guarantee (i) that the Site will satisfy the specific expectations and demands of the User and (ii) that the Site will continue uninterrupted or free from errors. As such, the User will not hold www.jukeboxcomprehension.com to obligation regarding the performance of the Site.</p>
+    <p>  5.2. In no case may www.jukebox comprehension.com be held responsible for any direct, indirect or accidental damage resulting from the incorrect use of the Site, or all other software or any connection to periphery hardware.</p>
+    <p>  5.3. The User or Visitor commits and consents to (i) not disturb or interrupt networks connected to the Site (ii) conform to all rules, login procedures and conduct required on the Internet (iii) not to try to gain unauthorized access to other IT systems and (iv) not to disturb the use and functioning of the Site or of all other similar services.</p>
 
     <h3 class="neon-font blue">  6. Autonomy </h3>
-      <p>   6.1. If one of the conditions of the present Terms &amp; Conditions is declared null and void or inapplicable, the other conditions remain valid. 6.2. No party may be presumed to have renounced one or more of the present Terms &amp; Conditions unless the renunciation has been communicated in writing (electronic or not). </p>
+    <p>  6.1. If one of the conditions of the present Terms &amp; Conditions is declared null and void or inapplicable, the other conditions remain valid. </p>
+    <p>  6.2. No party may be presumed to have renounced one or more of the present Terms &amp; Conditions unless the renunciation has been communicated in writing (electronic or not). </p>
 
     <h3 class="neon-font blue">Disclaimer:</h3>
     <p>Jukebox Comprehension Ltd makes no warranties or representations of any kind concerning the accuracy or suitability of the information contained on this web site for any purpose. All such information is provided "as is" and with specific disclaimer of any warranties of merchantability, fitness for purpose, title and/or non-infringement. Jukebox Comprehension Ltd makes no warranties or representations of any kind that the services provided by this web site will be uninterrupted , error-free or that the web site or the server that hosts the web site are free from viruses or other forms of harmful computer code.
     In no event shall Jukebox Comprehension Ltd, its employees or agents be liable for any direct, indirect or consequential damages resulting from the use of this web site. This exclusion and limitation only applies to the extent permitted by law and is without prejudice to any express provisions to the contrary in any written licence or subscription agreement from Jukebox Comprehension Ltd in respect of the use of any online service provided via this web site.
     </p>
     <h3 class="neon-font blue">Business Details:</h3>
-    <p> If you need to contact us directly then please either the email, call or write to us at the following address: </p>
+    <p> If you need to contact us directly then please email, call or write to us at the following address: </p>
     <h4><span class="neon-font blue">Post:</span> </h4>
     <p>Jukebox Comprehension Ltd </p>
     <p>74 Manchester Street </p>
