--- a/src/app/components/menu/menu.less
+++ b/src/app/components/menu/menu.less
@@ -19,13 +19,12 @@
 .carousel-control .glyphicon-chevron-right,
 .carousel-control .icon-next,
 .carousel-control .icon-prev {
-  font-size: 100px !important;
+  font-size: 40px !important;
   width: inherit;
+  margin-right: -5%;
+  margin-left: -60%;
+  margin-top: 210%;
   color: @blue
-}
-
-.carousel-control.right {
-  padding-right: 215px !important;
 }
 
 .carousel .carousel-indicators { visibility: hidden; }
@@ -37,4 +36,10 @@
 .song-title {
   margin-top: 5px;
   margin-bottom: 5px;
+  margin-right: 7%;
+  margin-left: 7%;
+}
+
+.genre-title {
+  margin-top: 10px;
 }
