--- a/src/app/components/menu/menu.html
+++ b/src/app/components/menu/menu.html
@@ -46,7 +46,7 @@
               <img width="100%" ng-src="{{song.image}}">
             </div>
             <div class="text-center" ng-class="menu.genreColour">
-              <h3 class="song-title">{{song.title}}</h3>
+              <h3 class="song-title genre-title">{{song.title}}</h3>
             </div>
           </div>
           <div ng-switch-default>
@@ -56,7 +56,8 @@
               </a>
             </div>
             <div class="text-center" ng-class="menu.genreColour">
-              <h3 class="song-title">{{song.artist}} - {{song.title}}</h3>
+              <h3 class="song-title">{{song.artist}}</h3>
+              <h3 class="song-title">{{song.title}}</h3>
             </div>
           </div>
         </div>
