--- a/src/app/components/menu/menu.html
+++ b/src/app/components/menu/menu.html
@@ -46,7 +46,8 @@
               <img width="100%" ng-src="{{song.image}}">
             </div>
             <div class="text-center" ng-class="menu.genreColour">
-              <h3 class="song-title genre-title">{{song.title}}</h3>
+              <h3 class="song-title">{{song.title}}</h3>
+              <h3 class="song-title">&nbsp;</h3>
             </div>
           </div>
           <div ng-switch-default>
