--- a/src/app/components/menu/menu.html
+++ b/src/app/components/menu/menu.html
@@ -47,7 +47,7 @@
             </div>
             <div class="text-center" ng-class="menu.genreColour">
               <h3 class="song-title">&nbsp;</h3>
-              <h3 class="song-title">{{song.title}}</h3>
+              <h3 class="song-title neon-font">{{song.title}}</h3>
             </div>
           </div>
           <div ng-switch-default>
