minor tweaks and add new songs

--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -15,7 +15,7 @@
       <div>
         <h4 class="modal-title neon-font blue">Annual Membership Fee</h4>
 
-        <p>&pound;125 + VAT per school</p>
+        <p>&pound;125 per school</p>
 
         <p>This will gain you full access to the site and associated material for a single
         academic year (September 1st – August 31st).</p>
