--- a/src/app/components/menu/menu.html
+++ b/src/app/components/menu/menu.html
@@ -45,9 +45,9 @@
             <div>
               <img width="100%" ng-src="{{song.image}}">
             </div>
-            <div class="text-center" ng-class="menu.genreColour">
-              <h5 class="song-title">&nbsp;</h5>
-              <h2 class="song-title neon-font">{{song.title}}</h2>
+            <div class="text-center" ng-class="menu.genreColour" style="height:57px;">
+
+              <h2 class="song-title neon-font" style="margin-top:10px;">{{song.title}}</h2>
             </div>
           </div>
           <div ng-switch-default>
