film brackets trim, new vids, minor tweaks

--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -25,7 +25,7 @@
         <p>By registering you agree to Jukebox Comprehension’s Terms &amp; Conditions.</p>
 
         <h4><span class="neon-font blue">E-mail:</span> jukeboxcomprehension@gmail.com</h4>
-        <h4><span class="neon-font blue">Telephone:</span> 07724042186</h4>
+        <h4><span class="neon-font blue">Telephone:</span> 0161 204 3000</h4>
       </div>
 
       <hr/>
