--- a/src/app/components/menu/menu.html
+++ b/src/app/components/menu/menu.html
@@ -47,7 +47,7 @@
             </div>
             <div class="text-center" ng-class="menu.genreColour" style="height:57px;">
 
-              <h2 class="song-title neon-font" style="margin-top:10px;">{{song.title}}</h2>
+              <h2 class="song-title neon-font" style="margin-top:10px;padding-top: 8px;">{{song.title}}</h2>
             </div>
           </div>
           <div ng-switch-default>
