--- a/src/app/components/terms/terms.html
+++ b/src/app/components/terms/terms.html
@@ -66,6 +66,6 @@
     <p>Heywood </p>
     <p>Ol10 1DL</p>
     <h4><span class="neon-font blue">E-mail:</span> jukeboxcomprehension@gmail.com</h4>
-    <h4><span class="neon-font blue">Telephone:</span> 07724042186</h4>
+    <h4><span class="neon-font blue">Telephone:</span> 0161 204 3000</h4>
   </div>
 </div>
