--- a/src/app/index.less
+++ b/src/app/index.less
@@ -124,7 +124,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 footer {
-  color: white;
+  color: @blue;
   position: absolute;
   bottom: 0;
   width: 100%;
