--- a/src/app/components/contact/contact.html
+++ b/src/app/components/contact/contact.html
@@ -15,5 +15,5 @@
   <p>Then we’d love to hear from you. Just get in touch and we’ll get back to you as soon as we can.</p>
 
   <h4><span class="neon-font blue">E-mail:</span> jukeboxcomprehension@gmail.com</h4>
-  <h4><span class="neon-font blue">Telephone:</span> 07724042186</h4>
+  <h4><span class="neon-font blue">Telephone:</span> 0161 204 3000</h4>
 </div>
