--- a/src/app/components/detail/detail.html
+++ b/src/app/components/detail/detail.html
@@ -1,7 +1,7 @@
 <div class="col-xs-12 col-sm-3">
   <div class="col-xs-12 col-sm-12 song-text blue neon-font">
     <h2 class="text-wrap">{{detail.selectedSong.artist}}</h2>
-    <h2 class="text-wrap">{{detail.selectedSong.title}}</h2>
+    <h2 class="text-wrap">{{detail.trimBrackets(detail.selectedSong.title)}}</h2>
   </div>
   <div class="spacer-1x col-sm-12 hidden-xs">&nbsp;</div>
   <div class="col-xs-12 col-sm-12">
