--- a/src/app/components/contact/contact.html
+++ b/src/app/components/contact/contact.html
@@ -15,5 +15,26 @@
   <p>Then we’d love to hear from you. Just get in touch and we’ll get back to you as soon as we can.</p>
 
   <h4><span class="neon-font blue">E-mail:</span> jukeboxcomprehension@gmail.com</h4>
-  <h4><span class="neon-font blue">Telephone:</span> 0161 204 3000</h4>
+  <h4><span class="neon-font blue">Telephone:</span> 07724 042 186</h4>
+
+<hr/>
+  <h4 class="neon-font blue">Metronomics: The Science Behind the Learning</h4>
+
+  <p>A Professional Development course that will help you understand the proven
+    benefits of using songs, lyrics and music videos to boost achievement and
+    develop the whole child. </p>
+  <p>Created to help teachers embed core Literacy skills
+    across the wider curriculum, this course focuses on the fascinating research
+    of Metronomics: the science of how music enables the brain to acquire
+    language both quickly and securely. </p>
+
+  <p>It will also look at the wider benefits of using song lyrics in the
+      classroom and explain the best ways in which to use music videos
+      effectively to maximise their impact. </p>
+  <p>&nbsp;</p>
+
+    <div class="form-group">
+        <a class="btn btn-lg btn-primary btn-lg outline neon-font blue"
+        href="http://www.johnmurraycpd.co.uk/metronomics" target="_blank" >Find Out More</a>
+    </div>
 </div>
