--- a/src/app/components/terms/terms.html
+++ b/src/app/components/terms/terms.html
@@ -8,8 +8,34 @@
 </div>
 <div class="modal-body">
 
-  <div id="terms-content" style="overflow:scroll; overflow-x:hidden; height:400px;">
+  <h2 class="neon-font blue">Privacy</h2>
+  <div id="privacy-content" style="overflow:scroll; overflow-x:hidden; height:400px;">
+    <p>Jukebox Comprehension Ltd is committed to protecting your privacy online
+      and will never share your contact information with another party.
+      We do not store credit card details nor do we share customer financial
+      details with any third parties.</p>
+    <h4 class="neon-font blue">What Information do we collect?</h4>
+    <p>When you register with us, we ask you for the following pieces of information:
+      your name, contact address (both email and geographical) and, when necessary,
+      any information that will allow payments to transfer to us securely.</p>
+    <h4 class="neon-font blue">How do we use your information?</h4>
+    <p>Your personal information may be used to verify that you are the subscriber
+      to the Jukebox Comprehension website.  We also use the information we
+      collect to help us understand more about how our web site is used, to
+      improve our site, and to send you information about us and our products
+      we think will be of interest to you.  Unless you have informed us that you
+      do not wish to receive further information about our products, we will,
+      from time to time, send you mail, both direct and electronically.</p>
+    <h4 class="neon-font blue">Do we share information?</h4>
+    <p>We will never sell or arbitrarily pass on your personal information to others.
+    If we believe that your use of the site is unlawful or damaging to others,
+    we reserve the right to disclose the information we have obtained through
+    the site about you to the extent that it is reasonably necessary in our
+    opinion to prevent, remedy or take action in relation to such conduct.</p>
+  </div>
 
+  <h2 class="neon-font blue">T & C's</h2>
+  <div id="terms-content" style="overflow:scroll; overflow-x:hidden; height:400px;">
     <p>Please read the following Terms &amp; Conditions carefully.
       They apply to www.jukeboxcomprehension.com and cover all use of the Site.
       By registering, you confirm that you have read the Terms &amp; Conditions
@@ -66,6 +92,6 @@
     <p>Heywood </p>
     <p>Ol10 1DL</p>
     <h4><span class="neon-font blue">E-mail:</span> jukeboxcomprehension@gmail.com</h4>
-    <h4><span class="neon-font blue">Telephone:</span> 0161 204 3000</h4>
+    <h4><span class="neon-font blue">Telephone:</span> 07724 042 186</h4>
   </div>
 </div>
